# voice_agent

./: README.md  app.py  home.html  pyproject.toml  requirements.txt  setup.py  template.py
routers/: summary.py  websocket_audio.py
services/: audio_utils.py  langchain_utils.py  whisper_utils.py
