[project]
name = "voice-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faster-whisper>=1.1.1",
    "grpcio>=1.71.0",
    "nvidia-riva-client>=2.16.0",
    "pyav>=14.2.1",
    "streamlit-webrtc>=0.62.4",
    "tts",
]
